<resources>
    <string name="app_name">Suraksha</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contact_list">Search Contact</string>
    <string name="add">add</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="community">Community</string>
    <string name="distress_helpline">Distress Helpline</string>
    <string name="settings">Settings</string>
    <string name="actvate">Slide to Activate</string>
</resources>
