<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Home"
    tools:showIn="@layout/app_bar_home">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312">

        <ImageView
            android:id="@+id/settings"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/settings"
            app:layout_constraintStart_toEndOf="@+id/helpline"
            app:layout_constraintTop_toBottomOf="@+id/comm" />

        <ImageView
            android:id="@+id/helpline"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/helpline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView

            android:id="@+id/comm"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/community"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/contact"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/contacts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contacts_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/add_contacts"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/helpline"
            app:layout_constraintEnd_toEndOf="@+id/contact"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/community_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/community"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/settings"
            app:layout_constraintEnd_toEndOf="@+id/comm"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toEndOf="@+id/contact" />

        <TextView
            android:id="@+id/distress_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/distress_helpline"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/helpline"
            app:layout_constraintEnd_toEndOf="@+id/helpline"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="@+id/helpline" />

        <TextView
            android:id="@+id/settings_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/settings"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/settings"
            app:layout_constraintEnd_toEndOf="@+id/settings"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toEndOf="@+id/helpline" />
    </android.support.constraint.ConstraintLayout>

    <ng.max.slideview.SlideView
        android:id="@+id/slideview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:sv_animateSlideText="true"
        app:sv_buttonBackgroundColor="#FFFFFF"

        app:sv_reverseSlide="false"
        app:sv_slideBackgroundColor="#c43a14"
        app:sv_slideText="@string/actvate"
        app:sv_slideTextColor="#ffffff"
        app:sv_slideTextSize="16sp" />

</android.support.constraint.ConstraintLayout>